# g04-final-project-c-voxify_saya-akan-lawan

./: .gitignore  README.md
backend/: .env.example  bridge.py  dispatcher.py  main.py  pyproject.toml  server.py
backend/db/: config.py  database.py
backend/migrations/: env.py
backend/migrations/versions/: a21f0af6bf7c_initial_schema.py  e79d7f65a76e_add_missing_fields_and_roles.py
backend/models/: __init__.py  base.py  direct_message.py  message.py  reaction.py  room.py  room_member.py  user.py
backend/repositories/: __init__.py  base.py  direct_message.py  message.py  room.py  user.py
backend/routers/: auth.py  deps.py  dms.py  messages.py  rooms.py  websocket.py
backend/schema/: __init__.py  base.py  direct_message.py  message.py  room.py  user.py
backend/services/: __init__.py  auth.py  direct_message.py  exceptions.py  message.py  room.py  security.py  websocket_manager.py
backend/test/: test_tcp.py
backend/utils/: __init__.py  exceptions.py  protocol.py
docs/: auth.md  dms.md  messages.md  rooms.md  standardization.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  auth.js  dashboard.js  network.js
